--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -6,13 +6,13 @@
   <a data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('DASH')" data-ng-class="{active: currency.symbol == 'DASH'}">DASH</a>
+  <a data-ng-click="setCurrency('CHC')" data-ng-class="{active: currency.symbol == 'CHC'}">CHC</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('mDASH')" data-ng-class="{active: currency.symbol == 'mDASH'}">mDASH</a>
+  <a data-ng-click="setCurrency('mCHC')" data-ng-class="{active: currency.symbol == 'mCHC'}">mCHC</a>
   </li> 
   <li>
-  <a data-ng-click="setCurrency('uDASH')" data-ng-class="{active: currency.symbol == 'uDASH'}">uDASH</a>
+  <a data-ng-click="setCurrency('uCHC')" data-ng-class="{active: currency.symbol == 'uCHC'}">uCHC</a>
   </li>
 </ul>
 
